# mlplatform

./: .gitattributes  .gitignore  .gitlab-ci.yml  .ttd-launcher.json  README.md  dotnet-tools.json  global.json  nuget.config  runr.ps1
.ci-templates/: common.yml
audience/: .gitlab-ci.yml  build.sbt
audience/src/main/python/: Dockerfile.prod  README.md  setup.cfg
audience/src/main/python/feature_json/: rsm_model_br_schema.json
audience/src/main/python/id_to_model_trainer/: data.py  experiment.py  features.py  lion_optimizer.py  main.py  models.py  training.py  utils.py
audience/src/main/python/tools/: scheduler.py
benchmark-suite/: .gitlab-ci.yml  Dockerfile  Makefile  README.md  build.sbt
confetti/: .gitlab-ci.yml  build.sbt
contextual-features-python/: Dockerfile  Makefile  README.md  conftest.py  requirements.txt  setup.py
contextual-features-scala/: .gitlab-ci.yml  Dockerfile  Makefile  build.sbt
feature_store/: .gitlab-ci.yml  build.sbt
frequency/: .gitlab-ci.yml  readme.md
geronimo/: .gitlab-ci.yml  README.md  build.sbt
kongming/: .gitlab-ci.yml  README.md  build.sbt
mlplatform/: .gitlab-ci.yml  pom.xml
philo/: .gitlab-ci.yml  build.sbt
plutus/: .gitignore  .gitlab-ci.yml  Dockerfile  (+3 more)
plutus/src/main/python/: Dockerfile.cpu  Dockerfile.gpu  Dockerfile.prod  README.md  clustersetup.sh  features.json  main.py  model.py  modelrun.sh  old.py  setup.cfg
plutus/src/main/python/docker/: Dockerfile  tensorflow.yml
plutus/src/main/python/docker/db_default/: tensorflow.yml
plutus/src/main/python/docker/db_plutus_scratch/: Dockerfile  tensorflow.yml
plutus/src/main/python/docker/nvtab/: Dockerfile.rapids  rapids_nvt_tf.yml  tensorflow.old  tensorflow.yml
plutus/src/main/python/docker/scratch/: tensorflow.yml
plutus/src/main/python/lib/: dotinteractions.py  embeddings.py  features.py  tfutils.py
plutus/src/main/python/notebooks/serving/: tf_serving_test.ipynb
plutus/src/main/python/plutus/: __init__.py  data.py  dist.py  embeddings.py  feature_utils.py  features.py  layers.py  losses.py  metrics.py  models.py  prometheus.py
plutus/src/main/python/tests/: test_data.py  test_features.py  test_golden_sector.py  test_losses.py  test_metrics.py  test_model.py  test_model_export.py
(+1325 files in other folders)
