[metadata]
name = id_to_model_trainer
version = 0.0.1
author = Yang Lin
author_email = yang.lin@thetradedesk.com
description = ID to model training code

[options]
packages = find:
python_requires = >=3.8.10
install_requires =
    tensorflow==2.9.0
    absl-py==1.2.0
    tqdm==4.64.0
    awscli==1.25.55
    pandas==2.0.1
    pyarrow==12.0.0
    fastparquet==2023.4.0
    protobuf==3.20.3

[flake8]
ignore = E261,E731,E121,E201,E202
exclude = .git,__pycache__,dist,setup.py
max-complexity = 10
max-line-length = 200
