[metadata]
name = plutus
version = 0.0.1
author = Michael Davy
author_email = michael.davy@thetradedesk.com
description = Package for training a model to predict market price of a bidding opportunity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.adsrvr.org/thetradedesk/mlplatform/-/tree/master/plutus
project_urls =
    Web Page = https://atlassian.thetradedesk.com/confluence/display/EN/Plutus+Design
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = plutus
python_requires = >=3.8
install_requires =
    tensorflow==2.4.1
    tensorflow_probability==0.12.2
    pandas
    numpy
    tensorflow-serving-api==2.4.1
    prometheus_client


